--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,9 @@ header{
   background-image:url("../images/tree_header_bg.png");
   color:rgb(135, 87, 54);
 }
+header,h1{
+  filter: drop-shadow(0px 5px 2px  darkgreen);
+}
 nav{
   z-index: 100;
   position: sticky;
@@ -43,6 +46,7 @@ nav ul li a{
   font-size: 2em;
   font-weight: bolder;
   font-family:arial;
+  filter: drop-shadow(2px 2px 3px  darkgreen);
 }
 nav ul li:first-child{
   border-radius: 0 0 0 30px;
@@ -52,6 +56,7 @@ nav ul li:last-child{
 }
 nav ul li:hover{
   background-image:url("../images/tree_header_bg.png");
+  filter: drop-shadow(0px 3px 2px  darkgreen);
 }
 main{
   width: 90%;
@@ -73,6 +78,7 @@ p{
 }
 p::first-letter{
   font-size: 2em;
+  color: darkred;
 }
 p img{
   float: left;
