--- a/styles/style.css
+++ b/styles/style.css
@@ -3,23 +3,22 @@ body,header,nav,h1,h3,a,ul,li,footer,main,div{
   padding: 0;
 }
 body{
-  background-color: darkgreen;
+  background-color: #5E801B;
   background-image:url("../images/tree_body_bg.png");
 }
 #container{
   width: 80%;
   margin: 0 auto;
   background-color: red;
-  background-color: darkgreen;
+  background-color: #2F400E;
   background-image:url("../images/tree_container_bg.png");
 }
 header{
   padding: 60px 0 60px 0;
-  background-color: darkgreen;
   text-align: center;
   font-size: 3em;
   font-family: arial;
-  background-color: darkgreen;
+  background-color: #8DBF29;
   background-image:url("../images/tree_header_bg.png");
   color:rgb(135, 87, 54);
 }
@@ -32,7 +31,8 @@ nav{
   top: 0;
 }
 nav ul li{
-  background-color: green;
+  background-color: #3D4909;
+  background-image:url("../images/tree_nav1_bg.png");
   text-align: center;
   float: left;
   list-style-type: none;
@@ -55,6 +55,7 @@ nav ul li:last-child{
   border-radius: 0 0 30px 0;
 }
 nav ul li:hover{
+  background-color: #BCFF36;
   background-image:url("../images/tree_header_bg.png");
   filter: drop-shadow(0px 3px 2px  darkgreen);
 }
@@ -63,7 +64,7 @@ main{
   margin: 0 auto;
   clear: left;
   overflow: auto;
-  background-color: darkgreen;
+  background-color: #2F400E;
   background-image:url("../images/tree_container_bg.png");
 }
 #img_1{
@@ -92,18 +93,22 @@ p img{
 }
 #column_1{
   margin-left: 5%;
+  background-color: #C9FF5E;
   background-image:url("../images/tree_div1_bg.png");
 }
 #column_2{
+  background-color: #D7FF86;
   background-image:url("../images/tree_div2_bg.png");
 }
 #column_3{
+  background-color: #E4FFAF;
   background-image:url("../images/tree_div3_bg.png");
 }
 footer{
   color:rgb(90, 87, 54);
   text-align: center;
   clear: left;
+  background-color: #8DBF29;
   background-image:url("../images/tree_header_bg.png");
   padding-top: 20px;
   padding-bottom: 20px;
